# playa_project

./: .env-new  .env.example  .gitattributes  .gitignore  Dockerfile  Readme.md  condiciones_playas.json  docker-compose.yml  generar_condiciones_playas.py  pyproject.toml  requirements.txt
backend/: Dockerfile.dev  OLD-condiciones_playas.json  OLD-playas.json  beaches.json  condiciones_playas.json  config.py  db.py  engine_recomendation.py  favs.py  main.py  playas.json  seed_beaches.py  sunlight_provider.py  weather_provider.py
backend/auth/: auth.py
backend/models/: __init__.py  activity.py  activity_variable_weight.py  beach.py  beach_activity.py  beach_condition.py  beach_service.py  default_activity_weight.py  service.py  user.py  user_activity_preference.py  user_favourite_beaches.py  variable.py
backend/routes/: __init__.py  activities.py  activity_variable_weights.py  admin.py  api.py  auth.py  beach_conditions.py  beaches.py  services.py  (+4 more)
doc/: Practica3_SCRUM_Grupo12.docx  Practica3_SCRUM_Grupo2.docx
docs/: Practica3_SCRUM_GrupoX.docx  ~$actica3_SCRUM_GrupoX.docx
frontend/: .dockerignore  Dockerfile.frontend.dev  docker-compose.yml  index.html  notes.md  package.json
playa_del_dia_mvp_sprint1/: .env.example  README.md  playa_del_dia.db  pyproject.toml  requirements.txt
tests/: test_admin_catalog.py  test_auth_register_email.py  test_beach_model.py  test_beach_type_taxonomy.py  test_engine_recomendation.py  test_recommendation_activity_bonus.py  test_recommendation_ideal_priority.py  test_sunlight_provider.py  test_weather_loading_for_new_beaches.py
(+71 files in other folders)
